--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -37,6 +37,7 @@
     "test:coordinator": "nyc mocha \"tests/component/coordinator.test.ts\"",
     "test:provisionUtil": "nyc mocha \"tests/component/provisionUtils.test.ts\"",
     "test:env": "nyc mocha \"tests/component/envUtil.test.ts\"",
+    "test:envMgr": "nyc mocha \"tests/core/environment.test.ts\"",
     "test:generator": "nyc mocha \"tests/component/generator/*.test.ts\"",
     "test:officeAddinGenerator": "nyc mocha \"tests/component/generator/officeAddinGenerator.test.ts\"",
     "test:scriptDriver": "nyc mocha \"tests/component/driver/script/scriptDriver.test.ts\"",
