--- a/.github/workflows/duplicate-app-studio-service-issue.yml
+++ b/.github/workflows/duplicate-app-studio-service-issue.yml
@@ -7,18 +7,25 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Actions
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Checkout github action repository
         uses: actions/checkout@v3
         with:
-          repository: "devdiv-azure-service-dmitryr/teamsfx-issue-triage-bot"
-          ref: main
-          path: ./actions
-          token: ${{secrets.GHEC_BOT_PAT}}
-      - name: Install Actions
-        run: npm install --production --prefix ./actions
+         repository: "microsoft/vscode-github-triage-actions"
+         ref: stable 
+         path: ./action-base
+
+      - name: Copy action
+        run: cp -r .github/actions/duplicate-handler-for-app-studio ./action-base/duplicate-handler-for-app-studio
+      - name: Npm install
+        run: npm install --production --prefix ./action-base
+      - name: Build action
+        continue-on-error: true
+        run: npm run build --prefix ./action-base
 
       - name: Check duplicate
-        uses: ./actions/duplicate-handler-for-app-studio
+        uses: ./action-base/duplicate-handler-for-app-studio
         with: 
           token: ${{secrets.GITHUB_TOKEN}}
           reply: Based on the status code and API name in error message, this issue is duplicated with {{first}}. You can refer to it for more information.
