--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,9 +1,9 @@
 name: SDK Dependency Auto Upgrade
 on:
-  schedule:
-    # The "*" (#42, asterisk) character has special semantics in YAML, so this
-    # string has to be quoted.
-    - cron: "0 * * * *"
+#   schedule:
+#     # The "*" (#42, asterisk) character has special semantics in YAML, so this
+#     # string has to be quoted.
+#     - cron: "0 * * * *"
   workflow_dispatch:
 
 permissions: read-all
