ci: update template list that need to update deps

--- a/templates/package.json
+++ b/templates/package.json
@@ -10,28 +10,34 @@
     },
     "templates": [
         "common",
+        "js/command-and-response",
+        "js/dashboard-tab",
+        "js/default-bot",
+        "js/default-bot-message-extension",
+        "js/m365-tab",
+        "js/message-extension",
+        "js/non-sso-tab",
+        "js/non-sso-tab-default-bot",
         "js/notification-http-timer-trigger",
         "js/notification-http-trigger",
-        "js/notification-timer-trigger",
         "js/notification-restify",
-        "js/command-and-response",
-        "js/m365-tab",
+        "js/notification-timer-trigger",
         "js/sso-tab",
-        "js/non-sso-tab",
-        "js/dashboard-tab",
-        "js/non-sso-tab-default-bot",
-        "js/default-bot-message-extension",
+        "js/workflow",
+        "ts/command-and-response",
+        "ts/dashboard-tab",
+        "ts/default-bot",
+        "ts/default-bot-message-extension",
+        "ts/m365-tab",
+        "ts/message-extension",
+        "ts/non-sso-tab",
+        "ts/non-sso-tab-default-bot",
         "ts/notification-http-timer-trigger",
         "ts/notification-http-trigger",
-        "ts/notification-timer-trigger",
         "ts/notification-restify",
-        "ts/command-and-response",
-        "ts/m365-tab",
+        "ts/notification-timer-trigger",
         "ts/sso-tab",
-        "ts/non-sso-tab",
-        "ts/dashboard-tab",
-        "ts/non-sso-tab-default-bot",
-        "ts/default-bot-message-extension"
+        "ts/workflow"
     ],
     "devDependencies": {
         "@microsoft/eslint-plugin-teamsfx": "^0.0.3",
