--- a/packages/sdk-react/tsconfig.json
+++ b/packages/sdk-react/tsconfig.json
@@ -16,10 +16,7 @@
     "declarationMap": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "typeRoots": ["node_modules/@types"],
-    "types": [
-      "jest", "node", "@types/jest"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/test/*"],
