--- a/.github/workflows/create-milestone.yml
+++ b/.github/workflows/create-milestone.yml
@@ -9,18 +9,25 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Actions
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Checkout github action repository
         uses: actions/checkout@v3
         with:
-         repository: "devdiv-azure-service-dmitryr/teamsfx-issue-triage-bot"
-         ref: main 
-         path: ./actions
-         token: ${{secrets.GHEC_BOT_PAT}}
-      - name: Install Actions
-        run: npm install --production --prefix ./actions
+         repository: "microsoft/vscode-github-triage-actions"
+         ref: stable 
+         path: ./action-base
+
+      - name: Copy action
+        run: cp -r .github/actions/create-milestone ./action-base/create-milestone
+      - name: Npm install
+        run: npm install --production --prefix ./action-base
+      - name: Build action
+        continue-on-error: true
+        run: npm run build --prefix ./action-base
 
       - name: Run Create Milestone
-        uses: ./actions/create-milestone
+        uses: ./action-base/create-milestone
         with:
           milestone-prefix: CY
           milestone-days: 14
