--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -1,8 +1,13 @@
-name: milestoned-azdo
+name: issue-milestoned
 
 on: 
   issues:
     types: [milestoned]
+  workflow_dispatch: # allows to run manually for testing
+    inputs:
+      issue-number:
+        description: 'specific issue to test issue-milestoned action'
+        required: true  
 
 jobs:
   main:
@@ -18,7 +23,7 @@ jobs:
          path: ./action-base
       
       - name: Copy action
-        run: cp -r .github/actions/milestoned ./action-base/milestoned
+        run: cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
       - name: Npm install
         run: npm install --production --prefix ./action-base
       - name: Build action
@@ -26,7 +31,7 @@ jobs:
         run: npm run build --prefix ./action-base
 
       - name: Create AZDO Item 
-        uses: ./action-base/milestoned
+        uses: ./action-base/issue-milestoned
         with:
           token: ${{secrets.GITHUB_TOKEN}}
           milestone-prefix: "CY"
