build: enable pull request trigger of e2e-test

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -10,15 +10,14 @@ on:
   schedule:
     - cron: "0 22 * * *"
 
-  push:
-    branches:
-      - renovate/**
+  pull_request:
 
 jobs:
   setup:
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx') }}
     runs-on: ubuntu-latest
     outputs:
-      cases: ${{ steps.schedule-cases.outputs.cases || steps.dispatch-cases.outputs.cases || steps.pr-cases.outputs.cases || steps.push-cases.outputs.cases }}
+      cases: ${{ steps.schedule-cases.outputs.cases || steps.dispatch-cases.outputs.cases || steps.pr-cases.outputs.cases }}
     env:
       AZURE_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
       AZURE_ACCOUNT_OBJECT_ID: ${{ secrets.TEST_USER_OBJECT_ID }}
@@ -37,7 +36,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Checkout (main)
-        if: ${{  github.event_name == 'push'  }}
+        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
         uses: actions/checkout@v3
         with:
           ref: main
@@ -94,9 +93,9 @@ jobs:
             echo "cases=$inputCases" >> $GITHUB_OUTPUT
           fi
 
-      - name: List cases for push
-        id: push-cases
-        if: ${{  github.event_name == 'push' }}
+      - name: List cases for pull request
+        id: pr-cases
+        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
         working-directory: packages/cli/tests/e2e
         run: |
           cases=`find ./bot ./frontend -path "*.tests.ts" -and \
@@ -142,7 +141,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Checkout (main)
-        if: ${{  github.event_name == 'push'  }}
+        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
         uses: actions/checkout@v3
         with:
           ref: main
@@ -205,7 +204,7 @@ jobs:
           path: packages/cli/tests/e2e/resource
 
       - name: Download samples(main)
-        if: github.event_name == 'push' && startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage') == false
+        if: (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx') && startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage') == false
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
@@ -271,7 +270,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Checkout (main)
-        if: ${{  github.event_name == 'push'  }}
+        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
         uses: actions/checkout@v3
         with:
           ref: main
@@ -301,7 +300,7 @@ jobs:
 
   rerun:
     needs: tear-down
-    if: ${{ (github.event_name == 'schedule' || github.event_name == 'push') && failure() && github.run_attempt < 5 }}
+    if: ${{ (github.event_name == 'schedule' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx')) && failure() && github.run_attempt < 5 }}
     runs-on: ubuntu-latest
     steps:
       - name: rerun
