--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -44,3 +44,4 @@ jobs:
           bug-label: "bug"
           bug-area-path: "Microsoft Teams Extensibility"
           bug-iteration-path: "Microsoft Teams Extensibility"
+          issue-number: ${{ github.event_name == 'workflow_dispatch' && steps.dispatch-cases.outputs.issue-number}}
