--- a/.github/workflows/issue-milestoned.yml
+++ b/.github/workflows/issue-milestoned.yml
@@ -1,12 +1,12 @@
-name: issue-milestoned
+name: Issue-milestoned
 
 on: 
   issues:
     types: [milestoned]
   workflow_dispatch: # allows to run manually for testing
     inputs:
-      issue-number:
-        description: 'specific issue to test issue-milestoned action'
+      issueNumber:
+        description: 'specific issue number to test issue-milestoned action'
         required: true  
 
 jobs:
@@ -24,12 +24,14 @@ jobs:
       
       - name: Copy action
         run: cp -r .github/actions/issue-milestoned ./action-base/issue-milestoned
+      - name: Npm install dependencies
+        run: npm install fs-extra azure-devops-node-api --prefix ./action-base
       - name: Npm install
         run: npm install --production --prefix ./action-base
       - name: Build action
         continue-on-error: true
         run: npm run build --prefix ./action-base
-
+      
       - name: Create AZDO Item 
         uses: ./action-base/issue-milestoned
         with:
@@ -42,3 +44,5 @@ jobs:
           bug-label: "bug"
           bug-area-path: "Microsoft Teams Extensibility"
           bug-iteration-path: "Microsoft Teams Extensibility"
+        env:
+          ISSUE_NUMBER: ${{github.event.inputs.issueNumber}}
