--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "2.0.0",
+  "version": "2.0.1-rc-hotfix.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -116,7 +116,7 @@
     "@azure/identity": "^3.1.3",
     "@microsoft/metrics-ts": "^0.0.4",
     "@microsoft/teamsfx-api": "^0.22.2",
-    "@microsoft/teamsfx-core": "^2.0.0",
+    "@microsoft/teamsfx-core": "^2.0.2-rc-hotfix.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async": "^2.6.4",
