--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "3.0.1",
+    "version": "3.0.2-rc-hotfix.0",
     "private": "true",
     "license": "MIT",
     "scripts": {
