--- a/.github/workflows/api2teams_ci.yml
+++ b/.github/workflows/api2teams_ci.yml
@@ -17,7 +17,12 @@ defaults:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
       - name: Checkout
