--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -31,15 +31,8 @@ jobs:
       M365_ACCOUNT_COLLABORATOR: ${{ secrets.TEST_COLLABORATOR_USER_NAME }}
       AZURE_DEVOPS_EXT_PAT: ${{ secrets.ADO_PAT }}
     steps:
-      - name: Checkout (dev)
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Checkout (main)
-        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
-        uses: actions/checkout@v3
-        with:
-          ref: main
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -47,7 +40,6 @@ jobs:
           node-version: 16
 
       - name: Setup legacy-peer-deps
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
         run: |
           npm config set legacy-peer-deps true
 
@@ -136,15 +128,8 @@ jobs:
     name: ${{ matrix.cases }}
 
     steps:
-      - name: Checkout (dev)
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Checkout (main)
-        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
-        uses: actions/checkout@v3
-        with:
-          ref: main
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -162,7 +147,6 @@ jobs:
           func --version
 
       - name: Setup legacy-peer-deps
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
         run: |
           npm config set legacy-peer-deps true
 
@@ -180,8 +164,15 @@ jobs:
             npm run setup
 
       - name: Link CLI
+        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
         run: |
           npm link --force
+
+      - name: Update CLI and legacy-peer-deps for PR cases
+        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
+        run: |
+          npm install -g @microsoft/teamsfx-cli@latest
+          npm config set legacy-peer-deps false
 
       - name: print system info
         run: |
@@ -201,14 +192,6 @@ jobs:
         with:
           repository: OfficeDev/TeamsFx-Samples
           ref: v3
-          path: packages/cli/tests/e2e/resource
-
-      - name: Download samples(main)
-        if: (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx') && startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage') == false
-        uses: actions/checkout@v3
-        with:
-          repository: OfficeDev/TeamsFx-Samples
-          ref: main
           path: packages/cli/tests/e2e/resource
 
       - name: Download samples from another repo
@@ -266,14 +249,7 @@ jobs:
       AZURE_DEVOPS_EXT_PAT: ${{ secrets.ADO_PAT }}
     steps:
       - name: Checkout (dev)
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
         uses: actions/checkout@v3
-
-      - name: Checkout (main)
-        if: ${{  github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'teamsfx-bot/TeamsFx'  }}
-        uses: actions/checkout@v3
-        with:
-          ref: main
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -281,7 +257,6 @@ jobs:
           node-version: 16
 
       - name: Setup legacy-peer-deps
-        if: ${{  github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'  }}
         run: |
           npm config set legacy-peer-deps true
 
