perf: update api2teams version to 0.0.1

--- a/packages/api2teams/package.json
+++ b/packages/api2teams/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/api2teams",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1",
   "description": "openapi spec to teams app",
   "main": "index.js",
   "author": "Microsoft Corporation",
