--- a/.github/workflows/api2teams_ci.yml
+++ b/.github/workflows/api2teams_ci.yml
@@ -11,10 +11,6 @@ on:
     branches: [main, dev, prerelease, api2teams]
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: packages/api2teams/
-
 jobs:
   test:
     strategy:
@@ -22,7 +18,7 @@ jobs:
         os: [ubuntu-latest]
         version: [14, 16, 18]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.version }}
 
     steps:
       - name: Checkout
@@ -34,9 +30,11 @@ jobs:
           node-version: ${{ matrix.version }}
 
       - name: Install
+        working-directory: packages/api2teams/
         run: |
           npm install
 
       - name: Test
+        working-directory: packages/api2teams/
         run: |
           npm run test
