--- a/.github/workflows/api2teams_ci.yml
+++ b/.github/workflows/api2teams_ci.yml
@@ -4,20 +4,20 @@ on:
   push:
     paths:
       - "packages/api2teams/**"
-    branches: [main, dev, prerelease]
+    branches: [main, dev, prerelease, api2teams]
   pull_request:
     paths:
       - "packages/api2teams/**"
+    branches: [main, dev, prerelease, api2teams]
   workflow_dispatch:
 
 jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest]
         version: [14, 16, 18]
 
-    runs-on: ${{ matrix.version }}
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
