Revert "ci: update"
This reverts commit aa34c75e5db50a30db022af6977fe62050de24e5.

--- a/.github/workflows/api2teams_ci.yml
+++ b/.github/workflows/api2teams_ci.yml
@@ -6,6 +6,8 @@ on:
       - "packages/api2teams/**"
     branches: [main, dev, prerelease, api2teams]
   pull_request:
+    paths:
+      - "packages/api2teams/**"
     branches: [main, dev, prerelease, api2teams]
   workflow_dispatch:
 
