test: use node 14,16,18 for test (#9025)
* test: use node 14,16,18 for test

* fix: ci yml issue

* ci: update

* ci: update

* ci: update

* ci: update

* Revert "ci: update"

This reverts commit aa34c75e5db50a30db022af6977fe62050de24e5.

---------

Co-authored-by: turenlong <rentu@microsoft.com>
Co-authored-by: wenyutang-ms <wenyutang@microsoft.com>

--- a/.github/workflows/api2teams_ci.yml
+++ b/.github/workflows/api2teams_ci.yml
@@ -4,19 +4,19 @@ on:
   push:
     paths:
       - "packages/api2teams/**"
-    branches: [main, dev, prerelease]
+    branches: [main, dev, prerelease, api2teams]
   pull_request:
     paths:
       - "packages/api2teams/**"
     branches: [main, dev, prerelease, api2teams]
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: packages/api2teams/
-
 jobs:
   test:
+    strategy:
+      matrix:
+        version: [14, 16, 18]
+
     runs-on: ubuntu-latest
 
     steps:
@@ -26,12 +26,14 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: ${{ matrix.version }}
 
       - name: Install
+        working-directory: packages/api2teams/
         run: |
           npm install
 
       - name: Test
+        working-directory: packages/api2teams/
         run: |
           npm run test
