--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -99,7 +99,8 @@
     "underscore": "^1.12.1",
     "validator": "^13.7.0",
     "vscode-jsonrpc": "^6.0.0",
-    "ws": "^8.2.3"
+    "ws": "^8.2.3",
+    "@microsoft/dev-tunnels-contracts": "~1.0.7360"
   },
   "optionalDependencies": {
     "keytar": "^7.7.0"
