--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -49,6 +49,7 @@
     "test:spfxFeature": "nyc mocha \"tests/component/feature/spfx.test.ts\"",
     "test:azureDeployImpl": "nyc mocha \"tests/component/driver/deploy/azure/AzureDeployImpl.test.ts\"",
     "test:azureFuncDeploy": "nyc mocha \"tests/component/driver/deploy/azure/AzureFunctionDeployDriver.test.ts\"",
+    "test:devportal": "nyc mocha \"tests/component/developerPortalScaffoldUtils.test.ts\"",
     "test:qm": "nyc mocha \"tests/ui/qm.visitor.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
