--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,9 +1,9 @@
 name: SDK Dependency Auto Upgrade
 on:
-#   schedule:
-#     # The "*" (#42, asterisk) character has special semantics in YAML, so this
-#     # string has to be quoted.
-#     - cron: "0 * * * *"
+  schedule:
+    # The "*" (#42, asterisk) character has special semantics in YAML, so this
+    # string has to be quoted.
+    - cron: "0 1 * * *"
   workflow_dispatch:
 
 permissions: read-all
@@ -22,22 +22,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-
-      - name: Setup project
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            npm run setup
-
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v36.0.0
         with:
-          token: "x-access-token:${{ steps.teamsfx-renovate.outputs.token }}"
+          token: "${{ steps.teamsfx-renovate.outputs.token }}"
           configurationFile: .github/renovate.json
+        env:
+          RENOVATE_FORK_TOKEN: "${{ secrets.FORK_RENOVATE_PAT }}"
