--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -132,7 +132,9 @@
     "xml2js": "^0.5.0",
     "yaml": "^2.2.2",
     "yaml-language-server": "1.7.0",
-    "zip-a-folder": "0.0.12"
+    "zip-a-folder": "0.0.12",
+    "@microsoft/dev-tunnels-contracts": "~1.0.7360",
+    "@microsoft/dev-tunnels-management": "~1.0.7360"
   },
   "devDependencies": {
     "@azure/storage-blob": "^12.5.0",
