--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-server",
-  "version": "2.0.2-rc-hotfix.0",
+  "version": "2.0.2",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -94,7 +94,7 @@
   "dependencies": {
     "@azure/identity": "^3.1.3",
     "@microsoft/teamsfx-api": "^0.22.2",
-    "@microsoft/teamsfx-core": "^2.0.2-rc-hotfix.0",
+    "@microsoft/teamsfx-core": "^2.0.2",
     "fs-extra": "^9.1.0",
     "underscore": "^1.12.1",
     "validator": "^13.7.0",
